# optimization-methods

./: .gitignore  CMakeLists.txt  MODERNIZATION.md  Makefile  README.md  baseline_output.txt  main.cpp  output.txt  output1.txt  output2.txt
conductor/: modernization_plan.md
include/: LennardJones.hpp  Optimizers.hpp  Vector.hpp
src/: LennardJones.h  Optimizers.h  Vector.h  main.cc  main.cpp
tests/: test_optimizers.cpp  test_physics.cpp  test_vector.cpp
